# seqExclude

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  qREADME.md
doc/: Makefile.am  Makefile.in  seqexclude.pod
src/: Makefile.am  Makefile.in  seqExclude.c
tests/: Makefile.am  Makefile.in  filter.sh  filter_160.err  filter_160.out  seqexclude.sh  test.fa
